[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Others/PanelFonte.tres" type="DynamicFont" id=2]
[ext_resource path="res://images/alchemy circle.png" type="Texture" id=3]
[ext_resource path="res://Others/MenuLogoFont.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.623529 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0.54902 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )
Panel/styles/panelf = null
Panel/styles/panelnc = null

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0.192157 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.36035
margin_top = -0.982574
margin_right = 1.36035
margin_bottom = -0.982544
color = Color( 1, 1, 1, 0.827451 )

[node name="Panel" type="Panel" parent="."]
margin_left = 126.0
margin_top = 273.0
margin_right = 430.0
margin_bottom = 587.0
theme = SubResource( 2 )

[node name="ButtonJogar" type="Button" parent="Panel"]
margin_left = 54.7382
margin_top = 72.5945
margin_right = 241.738
margin_bottom = 122.595
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Jogar"

[node name="ButtonCreditos" type="Button" parent="Panel"]
margin_left = 54.7382
margin_top = 142.595
margin_right = 241.738
margin_bottom = 192.595
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Credits"

[node name="ButtonSair" type="Button" parent="Panel"]
margin_left = 54.7382
margin_top = 212.595
margin_right = 241.738
margin_bottom = 262.595
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Sair"

[node name="CircleEdge" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 782.431
margin_top = 180.709
margin_right = 1582.43
margin_bottom = 980.708
rect_rotation = 90.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 400, 400 )
texture = ExtResource( 3 )

[node name="CircleCenter" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.278431 )
margin_left = 471.015
margin_top = -32.7336
margin_right = 1271.02
margin_bottom = 767.266
rect_rotation = 38.0
rect_scale = Vector2( 0.85, 0.85 )
rect_pivot_offset = Vector2( 400, 400 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 96.4774
margin_top = 118.511
margin_right = 450.477
margin_bottom = 239.511
custom_fonts/font = ExtResource( 4 )
text = "Don't Mess With My Blend"
align = 1
autowrap = true
[connection signal="button_down" from="Panel/ButtonJogar" to="." method="_on_ButtonJogar_button_down"]
[connection signal="button_down" from="Panel/ButtonCreditos" to="." method="_on_ButtonCreditos_button_down"]
[connection signal="button_down" from="Panel/ButtonSair" to="." method="_on_ButtonSair_button_down"]
